--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.container {
+  display: flex;
+  gap: 10px;
+}
 .colourOne {
   background-color: black;
 }
